# py-animl

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  release_flow.md  validate.yml
examples/: add_samples.ipynb  example.ipynb  samples.xml
schemas/: animl-core.xsd  animl-technique.xsd
src/animl2/: __init__.py
src/animl2/core/: __init__.py  annotations.py  base.py  fields.py
src/animl2/models/: __init__.py  author.py  category.py  common.py  data_type.py  device.py  doc.py  experiment.py  infrastructure.py  method.py  parameter.py  sample.py  series.py  software.py  tags.py  technique.py  template.py  unit.py  valuesets.py
src/animl2/utils/: regex.py
src/simple_animl/: __init__.py
src/simple_animl/core/: __init__.py  annotations.py  base.py  fields.py
src/simple_animl/models/: __init__.py  author.py  base.py  category.py  core.py  data_type.py  device.py  doc.py  experiment.py  infrastructure.py  method.py  parameter.py  result.py  sample.py  series.py  software.py  tags.py  template.py  unit.py  valuesets.py
src/simple_animl/models/core/: __init__.py  (+1 more)
tests/: helpers.py  test_annotations.py  test_author.py  test_base.py  test_category.py  test_common.py  test_datatypes.py  test_device.py  test_document.py  test_enums.py  test_experiment.py  test_fields.py  test_full_scale.py  test_import.py  test_infrastructure.py  test_method.py  test_parameter.py  test_regex.py  test_sample.py  test_series.py  test_software.py  test_tags.py  test_technique.py  test_units.py  test_valuesets.py
tests/resources/: animl_0.90.xml
